--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 # baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: benmarrow
-linkedin_username: benjamin-marrow-16a5088a
+linkedin_username: ben-marrow-16a5088a
 # github_username:  jekyll
 
 # Build settings
